[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Intro/IntroSquare.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Intro/made_by.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Intro/Intro.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/godot_logo.svg" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/GamepadDisclaimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Universal/FadeRect.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_cull_mode = 1
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 100, 100, 100 )

[node name="Intro" type="Spatial"]
script = ExtResource( 3 )

[node name="BG" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MadeBy" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -11.173, 0, -2.224 )
visible = false
pixel_size = 0.005
texture = ExtResource( 2 )

[node name="Squares" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.825, 0, 0 )
visible = false

[node name="IntroSquare" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0609999, 0, 0 )

[node name="IntroSquare2" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.026, 0, 0 )
number = 1

[node name="IntroSquare3" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.979, 0, 0 )
number = 2

[node name="IntroSquare4" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.944, 0, 0 )
number = 3

[node name="IntroSquare5" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.928, 0, 0 )
number = 4

[node name="IntroSquare6" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.893, 0, 0 )
number = 5

[node name="IntroSquare7" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.846, 0, 0 )
number = 6

[node name="IntroSquare8" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.811, 0, 0 )
number = 7

[node name="IntroSquare9" parent="Squares" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.787, 0, 0 )
number = 8

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.908004, 0.289476, -0.302875, 0, 0.722917, 0.690935, 0.418963, -0.627371, 0.656411, -4.90159, 10.4761, 10.2272 )
projection = 1
size = 24.0
far = 450.0

[node name="2D" type="CanvasLayer" parent="."]

[node name="GodotLogo" type="TextureRect" parent="2D"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="GamepadDisclaimer" parent="2D" instance=ExtResource( 5 )]
visible = false

[node name="FadeRect" parent="." instance=ExtResource( 6 )]

[node name="RevealGap" type="Timer" parent="."]
wait_time = 0.08

[connection signal="faded_in" from="FadeRect" to="." method="_on_FadeRect_faded_in"]
[connection signal="faded_out" from="FadeRect" to="." method="_on_FadeRect_faded_out"]
[connection signal="timeout" from="RevealGap" to="." method="_on_RevealGap_timeout"]
